# boost_serialization_example

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  test.py
python/boost_serialization_example/: __init__.py
src/: A.cpp  A.hpp  C.cpp  C.hpp  CSerialization.cpp  CSerialization.hpp  Serializer.cpp  Serializer.hpp  loader.cpp  module.cpp  saver.cpp  shared_ptr.cc  thelib.hpp
